--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,12 @@
 #server configs
 server.port=8090
+
+# create and drop tables and sequences, loads import.sql
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+
+# H2 settings
+spring.datasource.url=jdbc:h2:mem:pb_odb;MODE=Oracle
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=pbuser
+spring.datasource.password=pbpassword
