--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 server.port=8090
 
 # create and drop tables and sequences, loads import.sql
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=false
 
 # H2 settings
 spring.datasource.url=jdbc:h2:mem:pb_odb;MODE=Oracle
